fix: pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
     hooks:
       - id: pytest
         name: pytest
-        entry: uv run pytest tests/ -v
+        entry: uv run --frozen pytest tests/ -q
         language: system
         types: [python]
         pass_filenames: false
