--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Wallpaper collection management CLI tool"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "defusedxml>=0.7.1",
     "filetype>=1.2.0",
+    "ollama>=0.6.1",
     "typer>=0.21.1",
 ]
 
