--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "defusedxml>=0.7.1",
     "filetype>=1.2.0",
     "ollama>=0.6.1",
+    "textual>=0.95.0",
+    "textual-image>=0.8.5",
     "typer>=0.21.1",
 ]
 
