feat: adds config file

--- a/schenesort.yazi/schenesort.config
+++ b/schenesort.yazi/schenesort.config
@@ -47,6 +47,22 @@
     ai_model => {
         Name => 'AiModel',
     },
+
+    # Image dimensions
+    width => {
+        Name => 'Width',
+        Writable => 'integer',
+    },
+
+    height => {
+        Name => 'Height',
+        Writable => 'integer',
+    },
+
+    # Recommended screen size for this wallpaper
+    recommended_screen => {
+        Name => 'RecommendedScreen',
+    },
 );
 
 1;  # End of config (required for Perl)
